[B]0.9.24[/B]
Fix subtitles download filename length and scroll

[B]0.9.23[/B]
Fix musicplaylist

[B]0.9.22[/B]
New icons added
Widget code changes
Add sort letter on scrolling
Add page and item numbers on scrollbar
Add uninstall icon in addon info
Fix missing album cover icon
Fix scrollbar ids for non library views

[B]0.9.21[/B]
Fix musicvideo info
HDR Flag
Option to disable pressing up from menu
Keyboard improvements (thanks loggio!)

[B]0.9.20[/B]
LEIA - Fix for artwork helper on home screen
LEIA - Add extra download art icon
LEIA - Update artwork helper vars (thanks Guilouz!)
LEIA - Fix artwork helper vars
Fix screen calibration bug
Tweak EPG grid

[B]0.9.19[/B]
LEIA - Add artwork beef artwork helper support in videoinfodialog
LEIA - Add support for artwork beef artwork helper for extrafanart
Fix settings widget focus text
Fix settings labels
Cycle time of extrafanart reduced to 7 seconds
Lowercase text in epg
Show start/end time in epg when genre name disabled

[B]0.9.18[/B]
LEIA - Fix some PVR recording and some infolabels
Plot overlay delay option
Add PVR default widget options
Add PVR landscape text to check for channelname
Fix for pvr end time
Fix for shadowspot on volumebar
Add Episode List view
Autoclose OSD option

[B]0.9.17[/B]
Change user rating to star icon
Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyrics
Fix pvr timer and record icons
Add option to disable genre names
Fix some music info spacing
Add discart via skin helper to musicinfo

[B]0.9.16[/B]
LEIA - add "see more" widget item
LEIA - fix globalsearch backing panels
LEIA - fix for event log
Change seekbar seeking to a white nib
Fix widget gap bug
Gradient option
Light Opaque colour scheme
Add star rating option to disable in Ratings options

[B]0.9.15[/B]
LEIA - Global Search 8 now skinned
Add widget categories text option (wider categories widget)
Change premiered to year for movies
Rearrange info line so duration is next to end time